ready for step 4